--- a/moriarty-backend/package.json
+++ b/moriarty-backend/package.json
@@ -1,11 +1,37 @@
 {
   "name": "moriarty-backend",
   "version": "1.0.0",
-  "description": "",
+  "description": "Will choose your next book to read",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon index.js",
+    "up": "knex migrate:up",
+    "down": "knex migrate:down",
+    "seed": "knex seed:run",
+    "update": "knex migrate:latest",
+    "rollback": "knex migrate: rollback"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/VABIII/moriarty-backend.git"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "cors": "^2.8.5",
+    "dotenv": "^16.0.2",
+    "express": "^4.18.1",
+    "helmet": "^6.0.0",
+    "jsonwebtoken": "^8.5.1",
+    "knex": "^2.3.0",
+    "knex-cleaner": "^1.3.1",
+    "postgres": "^3.2.4"
+  },
+  "devDependencies": {
+    "cross-env": "^7.0.3",
+    "eslint": "^8.23.0",
+    "nodemon": "^2.0.19"
+  }
 }
