--- a/moriarty-backend/.env
+++ b/moriarty-backend/.env
@@ -1,6 +1,6 @@
   PORT=4000
   NODE_ENV=development
-  DEV_DATABASE_URL=postgresql://postgres:marley81@localhost:5432/clients
-  TESTING_DATABASE_URL=postgresql://postgres:marley81@localhost:5432/clients_test
+  DEV_DATABASE_URL=postgresql://postgres:marley81@localhost:5432/books
+  TESTING_DATABASE_URL=postgresql://postgres:marley81@localhost:5432/books_test
   BCRYPT_ROUNDS=8
   SEED_PASSWORD='1234'
